# genetics

./: LICENSE  Makefile.am  configure.ac  reformat.sh
src/: Makefile.am
src/evolution/: Makefile.am  agent.cpp  ecosystem.cpp  ecosystem.h  evolution.cpp  evolution.h  information.cpp  information.h  main.cpp  parameters.h
test/: Makefile.am  testEcosystem.cpp  testGenetics.cpp  testInformation.cpp
