bin_PROGRAMS = evolve
evolve_SOURCES = ecosystem.cpp \
				 ecosystem.h \
				 evolution.cpp \
				 evolution.h \
				 information.cpp \
				 information.h \
				 main.cpp \
				 parameters.h

# Library just for testing
noinst_LIBRARIES = libevolve.a
libevolve_a_SOURCES = ecosystem.cpp \
					  ecosystem.h \
					  evolution.cpp \
					  evolution.h \
					  information.cpp \
					  information.h \
					  parameters.h
