bin_PROGRAMS = evolve
evolve_SOURCES = agent.cpp \
				 agent.h \
				 ecosystem.cpp \
				 ecosystem.h \
				 information.cpp \
				 information.h \
				 main.cpp \
				 parameters.h

# Library just for testing
noinst_LIBRARIES = libevolve.a
libevolve_a_SOURCES = agent.cpp \
					  agent.h \
					  ecosystem.cpp \
					  ecosystem.h \
					  information.cpp \
					  information.h \
					  parameters.h
